# DataForGeeks

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: apple-ios-update-releases.yml  apple-macos-update-releases.yml  ci.yml  google-android-update-releases.yml  health-check.yml  linux-ubuntu-update-releases.yml  ms-apps-update-m365-buildnumbers.yml  ms-exchange-update-buildnumbers.yml  ms-msapps-update-buildnumbers.yml  ms-msother-update-msasrguid.yml  ms-msother-update-mschassistypes.yml  ms-msother-update-msgraph-bitlockerrecoverykey.yml  ms-msother-update-mslocales.yml  ms-mswin-update-buildnumbers.yml  ms-mswin-update-lifecycle-client-ltsc.yml  ms-mswin-update-lifecycle-client.yml  ms-mswin-update-lifecycle-server.yml  ms-mswin-update-msoperatingsystemsku.yml  ms-mswin-update-releases.yml  ms-other-update-asr-guids.yml  ms-other-update-bitlocker-volume-types.yml  ms-other-update-chassis-types.yml  ms-other-update-dotnet-lifecycle.yml  ms-other-update-edge-releases.yml  ms-other-update-locales.yml  ms-sql-update-buildnumbers.yml  ms-win-update-buildnumbers.yml  ms-win-update-lifecycle-client.yml  ms-win-update-lifecycle-ltsc.yml  ms-win-update-lifecycle-server.yml  ms-win-update-releases.yml  ms-win-update-sku.yml
content/apple/ios/: releases.json
content/apple/macos/: releases.json
content/google/android/: releases.json
content/linux/ubuntu/: releases.json
content/ms/apps/: buildnumbers.json
content/ms/exchange/: buildnumbers.json
content/ms/msapps/: buildnumbers.json
content/ms/msother/: msasrguid.json  mschassistypes.json  msgraph-bitlockerRecoveryKey.json  mslocales.json
content/ms/mswin/: buildnumbers.json  lifecycle-client-ltsc.json  lifecycle-client.json  lifecycle-server.json  msoperatingsystemsku.json  releases.json
content/ms/other/: asr-guids.json  bitlocker-volume-types.json  chassis-types.json  dotnet-lifecycle.json  edge-releases.json  locales.json
src/: exceptions.py
src/scrapers/: __init__.py  base.py
src/utils/: http.py  json_output.py  scraper_helpers.py
tests/: test_ms_new_scrapers.py  test_ms_scrapers.py  test_non_ms_scrapers.py  test_utils.py  test_win_buildnumbers.py
(+93 files in other folders)
